--- a/docs/get-started/usage.mdx
+++ b/docs/get-started/usage.mdx
@@ -103,7 +103,7 @@ import 'hello-csv/peer/index.css';
 ```jsx
 import { renderImporter } from 'hello-csv/bundled';
 
-renderImporter({
+renderImporter(document.querySelector('#app'), {
   sheets: [
     {
       id: 'employees',
@@ -124,5 +124,5 @@ renderImporter({
       ],
     },
   ],
-})
+});
 ```
