--- a/docs/common/customization/theme-styles.mdx
+++ b/docs/common/customization/theme-styles.mdx
@@ -12,11 +12,15 @@ You can further customize theme styles by overriding the following CSS variables
   --hello-csv-color-secondary: #6c757d;
   --hello-csv-color-tertiary: #17a2b8;
   --hello-csv-color-tertiary-light: #5bc0de;
-  --hello-csv-color-success: #28a745;
+  --hello-csv-color-success: #15803d;
+  --hello-csv-color-success-light: #4ade80;
+  --hello-csv-color-success-extra-light: #f0fdf4;
   --hello-csv-color-danger: #dc3545;
   --hello-csv-color-danger-light: #f5c6cb;
-  --hello-csv-color-danger-extra-light: #f8d7da;
-  --hello-csv-color-warning: #ffc107;
+  --hello-csv-color-danger-extra-light: #fef2f2;
+  --hello-csv-color-warning: #a16207;
+  --hello-csv-color-warning-light: #facc15;
+  --hello-csv-color-warning-extra-light: #fefce8;
   --hello-csv-color-info: #17a2b8;
   --hello-csv-color-muted: #f9fafb;
   --hello-csv-color-muted-light: #f3f4f6;
