--- a/docs/common/development/no-build-example.mdx
+++ b/docs/common/development/no-build-example.mdx
@@ -2,7 +2,7 @@
 title: "No Build Example"
 ---
 
-To run no build example you could run
+To run a no build example you could run
 
 ```bash
 npx http-server .
