add indexDB functionality (#142)
* add indexDB functionality

* update reducer to use indexDB

* make uuid based off of sheetDefinitions

* fix type arguments bug

* Update `ImporterState`: refine `rowFile` to exclude File Buffer for indexDB storage

Refined the rowFile structure in ImporterState to ensure it can be saved in indexDB.
File Buffers are excluded since they can't be stored directly in indexDB.

* update rowFile types

* save file content

* update file content

* convert file content to file

* update newState

* apply original sheetDefinitions when loading from indexDB

* add config to helloCSV

* update example app

* remove unneccesary line of code

* fix bug

* update how we load indexDB state

* reduce code in reducer

* move storage utils file to importer

* on indexDB upgrade

* add useful comment

* remove debugging helpers

* move default indexDB configration to importerBody

* add custom usePersistedReducer

* update types on storage helper

* remove onupgradeneeded for indexDB for now

* remove extra example

* add back file attribute

* update docs

* remove new docs

* docs for indexDB configuration (#151)

* revert docs version to v01.1.1

* only save to DB if enabled

* Fix quotes

* Add db version to release guide

* add use cases for indexDB custom key docs

---------

Co-authored-by: Mateusz Wszeborowski <wszeborowskimateusz@gmail.com>

--- a/docs/common/get-started/usage.mdx
+++ b/docs/common/get-started/usage.mdx
@@ -95,6 +95,7 @@ import 'hello-csv/peer/index.css';
   onComplete={(data) => {
     console.log(data);
   }}
+  indexDBConfig={{ enabled: true }}
 />;
 ```
 
