--- a/docs/v0.1.1/api-reference/importer-props.mdx
+++ b/docs/v0.1.1/api-reference/importer-props.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Importer Props"
+title: 'Importer Props'
 ---
 
 This section details each property available for the Importer component.
@@ -24,6 +24,7 @@ Array of sheet definitions for importing data. This property defines the structu
 **Description:**  
 A callback function invoked when the import process completes. It receives the final data and a progress callback.
 An `ImportStatistics` object can be returned to provide detailed information about the import results. The statistics object has the following properties:
+
 - `imported`: Number of rows successfully imported
 - `failed`: Number of rows that failed to import
 - `skipped`: Number of rows that were skipped
@@ -117,3 +118,24 @@ Provides a custom function to generate suggested mappings based on CSV headers.
 
 **Description:**  
 Callback executed when the user has finished reviewing the import summary. This can be used to navigate users to a results page, dashboard, or next step in the workflow after the import process completes successfully.
+
+---
+
+## indexDBConfig (releasing for `v0.1.2`)
+
+**Type:** `{ enabled: boolean; customKey?: string }`
+
+**Required:** No
+
+**Description:**  
+Configuration for IndexedDB storage. When enabled, the importer state will be persisted in the browser's IndexedDB storage, allowing users to resume their import process if the page is refreshed or closed. The `customKey` option allows specifying a unique identifier for the stored data.
+
+Use cases for `customKey`:
+
+- **Multiple Import Sessions**: When you need to handle multiple import processes simultaneously in the same application, you can use different `customKey` values to keep their states separate.
+
+- **User-Specific Storage**: When implementing a multi-user system, you can use the user's ID as the `customKey` to maintain separate import states for each user.
+
+- **Session Management**: You can use the `customKey` to implement session-specific storage, allowing you to clear specific import sessions without affecting others.
+
+---
