--- a/docs/common/development/deployment.mdx
+++ b/docs/common/development/deployment.mdx
@@ -23,10 +23,12 @@ For major version realease
 
 4. Update version in `InstallTabs.tsx::no build`, `example/index.html`, and `README.md`
 
-5. Create a PR in the repository called `Release v{x.y.z}`
+5. Verify if `importer/storage.ts:DB_VERSION` needs to be bumped. It should be bumped anytime the release contains any breaking changes to `ImporterState`. If it is true, increment the `DB_VERSION`.
 
-6. Run `npm publish` in the root directory, you can use `--dry-run` flag to test the deployment
+6. Create a PR in the repository called `Release v{x.y.z}`
 
-7. Create a new release in Github - https://github.com/HelloCSV/HelloCSV/releases. Remember about creating a tag (`v{x.y.z}`) and writing release notes.
+7. Run `npm publish` in the root directory, you can use `--dry-run` flag to test the deployment
 
-8. Merge `main` to `production` branch - this would trigger docs deployment to Mintlify.
+8. Create a new release in Github - https://github.com/HelloCSV/HelloCSV/releases. Remember about creating a tag (`v{x.y.z}`) and writing release notes.
+
+9. Merge `main` to `production` branch - this would trigger docs deployment to Mintlify.
