--- a/docs/common/development/deployment.mdx
+++ b/docs/common/development/deployment.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Deployment"
+title: 'Deployment'
 ---
 
 Deployment is done with the following steps
@@ -10,12 +10,14 @@ Deployment is done with the following steps
 
 3. Update version in docs
 
-For minor version realease 
+For minor version release
+
 - update version in `docs/docs.json` file
 - update directory name of `docs/v{oldVersion}` to `docs/v{newVersion}`
 - make sure to update all references to the old version in the `docs/docs.json` file
 
-For major version realease 
+For major version release
+
 - create a new directory in `docs` called `v{newVersion}`
 - copy all files from `docs/v{oldVersion}` to `docs/v{newVersion}`
 - create a new version entry in `docs/docs.json` file
