--- a/docs/v0.1.3/api-reference/importer-props.mdx
+++ b/docs/v0.1.3/api-reference/importer-props.mdx
@@ -68,7 +68,7 @@ Indicates whether manual data entry is allowed during the preview phase.
 
 ## locale
 
-**Type:** `'en' | 'fr'`
+**Type:** `'en' | 'fr' | 'pt-BR'`
 
 **Required:** No (Default: `en`)
 
