--- a/docs/v0.3.0/get-started/usage.mdx
+++ b/docs/v0.3.0/get-started/usage.mdx
@@ -95,7 +95,7 @@ import 'hello-csv/react/index.css';
   onComplete={(data) => {
     console.log(data);
   }}
-  indexDBConfig={{ enabled: true }}
+  persistenceConfig={{ enabled: true }}
 />;
 ```
 
@@ -186,7 +186,7 @@ import 'hello-csv/preact/index.css';
   onComplete={(data) => {
     console.log(data);
   }}
-  indexDBConfig={{ enabled: true }}
+  persistenceConfig={{ enabled: true }}
 />;
 ```
 
